--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       var global = global || window
       </script>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/safespace.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SafeSpaceAI | Your safe space to have difficult conversations</title>
   </head>
