--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
        */
       var global = global || window
       </script>
+      <!-- Google tag (gtag.js) -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-LSRGK57Q33"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-LSRGK57Q33');
+      </script>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/safespace.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
